Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35651

After some time video stops playing / video unreliable

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.3.0 Beta1
    • 5.2.0
    • Multimedia
    • None
    • Asus FonPad 7" (ME371MG) / Android 4.1.2
      Nexus 7 1st gen
    • Android
    • dcf11bba3ccfd2a2a44556b1947406947aaa2be1

    Description

      Our app plays a lot of HD video files that are interactively selected by a user or that automatically play in a loop.

      On various different tablets we sometimes have the issue that a video cannot be played anymore. That is the video is black and the QML video element reports an error of "Invalid state" or a blank error message.

      Once a video went black, stopping and starting it again does not help. It will stay black until we restart the app. Usually over time more and more videos turn black. It even happened that the whole Android media server died.

      I know it is difficult to debug without clear steps on how to reproduce this issue. However I've attached two logs coming from an ASUS device that hopefully provide some useful information.

      Please let me know how else I can help.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            stromme Christian
            conny Cornelius Hald
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes